# solfoundry

./: README.md
.github/scripts/: ai_review.py
.github/workflows/: bounty-tracker.yml  claim-guard.yml  pr-review.yml
assets/sticker-pack/: README.md
backend/: .env.example  requirements.txt
backend/app/: auth.py  constants.py  database.py  exceptions.py  main.py
backend/app/api/: agents.py  bounties.py  contributors.py  escrow.py  health.py  leaderboard.py  notifications.py  payouts.py  websocket.py
backend/app/core/: audit.py  logging_config.py
backend/app/middleware/: logging_middleware.py  rate_limiter.py
backend/app/models/: agent.py  bounty.py  bounty_table.py  errors.py  event.py  lifecycle.py  payout.py
backend/app/services/: auth_service.py  bounty_lifecycle_service.py  bounty_service.py  config_validator.py  escrow_security.py  payout_service.py  reputation_service.py  solana_client.py  staking_service.py  webhook_processor.py  websocket_manager.py
backend/src/services/: email.py
backend/tests/: test_agents.py  test_auth.py  test_bounty_lifecycle.py  test_email.py  test_health.py  test_logging_and_errors.py  test_rate_limit.py  test_security.py  test_webhook.py  test_websocket_events.py
backend/tests/e2e/: factories.py
contracts/bounty-registry/: Anchor.toml
contracts/bounty-registry/programs/bounty-registry/: Cargo.toml
contracts/bounty-registry/tests/fixtures/: README.md  authority.json  contributor1.json  contributor2.json
contracts/programs/escrow/: Cargo.toml
contracts/programs/reputation/: Cargo.toml
contracts/programs/staking/: Cargo.toml
contracts/programs/treasury/: Cargo.toml
contracts/staking-program/: Anchor.toml  STAKING.md  tsconfig.json
contracts/staking-program/programs/fndry-staking/: Cargo.toml
contracts/staking-program/programs/fndry-staking/src/: errors.rs  events.rs  lib.rs
contracts/staking-program/programs/fndry-staking/src/instructions/: claim_rewards.rs  compound.rs  initialize.rs  mod.rs  slash.rs  stake.rs  toggle_auto_compound.rs  unstake_complete.rs  unstake_initiate.rs  update_config.rs
contracts/staking-program/programs/fndry-staking/src/state/: mod.rs  stake_account.rs  staking_config.rs
contracts/staking-program/sdk/src/: index.ts
contracts/staking-program/tests/: fndry-staking.ts
docs/: local-development.md
frontend/: index.html  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/__tests__/: agent-marketplace.test.tsx  hooks-api-integration.test.tsx
frontend/src/components/: BountyCreationWizard.tsx  BountyDetailPage.tsx
frontend/src/components/common/: Modal.tsx
frontend/src/components/layout/: Header.tsx  (+3 more)
frontend/src/contexts/: ThemeContext.tsx
frontend/src/data/: mockAgents.ts
frontend/src/hooks/: useLeaderboard.ts  useTreasuryStats.ts
frontend/src/pages/: AgentMarketplacePage.tsx  DisputePage.tsx
frontend/src/types/: leaderboard.ts
scripts/: local-validator.sh  setup-test-accounts.sh  setup.sh  t3_callback_handler.py
(+3 files in other folders)
