[package]
name = "reputation"
version = "0.1.0"
description = "SolFoundry on-chain contributor reputation tracking"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "reputation"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
