[package]
name = "staking"
version = "0.1.0"
description = "SolFoundry $FNDRY staking for reputation multiplier boosts"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
