[package]
name = "treasury"
version = "0.1.0"
description = "SolFoundry protocol treasury for $FNDRY buybacks and bounty funding"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "treasury"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
