[package]
name        = "fndry-staking"
version     = "0.1.0"
description = "FNDRY staking program — stake $FNDRY tokens, earn tiered rewards, and unlock reputation boosts in the SolFoundry ecosystem."
edition     = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name       = "fndry_staking"

[features]
no-entrypoint  = []
no-idl         = []
no-log-ix-name = []
cpi            = ["no-entrypoint"]
default        = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl  = { version = "0.30.1", features = ["token"] }

[dev-dependencies]
# Pull in the library build (no program entrypoint) for unit-test compilation.
# The actual on-chain integration tests use the Anchor test validator.
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
